--- a/src/styles/transition.scss
+++ b/src/styles/transition.scss
@@ -1,49 +1,23 @@
 // global transition css
+ 
+.transitionRouter{
+  transition: all .32s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+ }
 
-/* fade */
-.fade-enter-active,
-.fade-leave-active {
-  transition: opacity 0.28s;
-}
-
-.fade-enter,
-.fade-leave-active {
-  opacity: 0;
-}
-
-/* fade-transform */
-.fade-transform-leave-active,
-.fade-transform-enter-active {
-  transition: all .5s;
-}
-
-.fade-transform-enter {
-  opacity: 0;
-  transform: translateX(-30px);
-}
-
-.fade-transform-leave-to {
-  opacity: 0;
-  transform: translateX(30px);
-}
-
-/* breadcrumb transition */
-.breadcrumb-enter-active,
-.breadcrumb-leave-active {
-  transition: all .5s;
-}
-
-.breadcrumb-enter,
-.breadcrumb-leave-active {
-  opacity: 0;
-  transform: translateX(20px);
-}
-
-.breadcrumb-move {
-  transition: all .5s;
-}
-
-.breadcrumb-leave-active {
-  position: absolute;
-}
-
+ .transitionLeft-enter,
+ .transitionRight-leave-active {
+   transform: translate(100%, 0);
+ }
+ .transitionLeft-leave-active,
+ .transitionRight-enter {
+   transform: translate(-100%, 0);
+ }
+ .transitionLeft-enter-active,
+ .transitionRight-enter-active {  
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   z-index:10;
+   position: absolute;
+ }
