--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,7 +8,7 @@ $base-font-size-bigger: 18px;
 $base-font-size-max: 22px;
 
 // base color
-$themeColoe: #007aff;;
+$themeColoe: #007aff;
 $base-color-green: #13ce66;
 $base-color-white: #ffffff;
 $base-color-black: #000000;
