--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,5 @@
-
 // 全局变量
-$map-sider-bar-width: 260px;
+$map-sider-bar-width: 420px;
 $base-font-size-small: 12px;
 $base-font-size-default: 14px;
 $base-font-size-big: 16px;
@@ -9,6 +8,7 @@ $base-font-size-max: 22px;
 
 // base color
 $themeColoe: #007aff;
+$themeWhiteColoe: #f6fafc;
 $base-color-green: #13ce66;
 $base-color-white: #ffffff;
 $base-color-black: #000000;
@@ -18,10 +18,13 @@ $base-color-gray: #97a8be;
 $base-border-color: #ebeef5;
 $base-font-color: #606266;
 $base-box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
- 
+$base-black-gradient: linear-gradient(90deg, rgba(0, 0, 0, 0.45) 0%, transparent);
+$base-theme-gradient: linear-gradient(270deg, rgba(65, 139, 194, 0), rgba(65, 139, 194, .5));
+$base-blue-gradient: linear-gradient(to right, rgba(50, 97, 168, 1), rgba(21, 31, 46, 0));
+$base-blue-gradient: linear-gradient(to right, rgba(50, 97, 168, 1), rgba(21, 31, 46, 0));
+
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
 :export {
   themeColoe: $themeColoe;
 }
-
