--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -21,6 +21,7 @@ $base-box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
 $base-black-gradient: linear-gradient(180deg, rgba(0, 0, 0, 0.45) 0%, transparent);
 $base-theme-gradient: linear-gradient(270deg, rgba(65, 139, 194, 0), rgba(65, 139, 194, .5));
 $base-blue-gradient: linear-gradient(to right, rgba(50, 97, 168, 1), rgba(21, 31, 46, 0));
+$base-blue2-gradient: linear-gradient(180deg, rgba(135, 143, 166,0) , rgba(117, 123, 151, 0.78));
 
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
