--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,7 +14,6 @@ body,
     width: 100%;
     height: 100%;
     overflow: hidden;
-    line-height: 1.4;
     color: #BEDAF1;
     box-sizing: border-box;
 }
@@ -103,10 +102,8 @@ a:hover {
     align-content: space-between;
     justify-content: space-around;
     width: 100%;
-
     &-item-column {
         flex: 1;
-        height: 120px;
         display: flex;
         text-align: center;
         flex-direction: column;
@@ -121,19 +118,21 @@ a:hover {
         border-radius: 4px;
         margin-bottom: 4px;
         border: 1px solid #343f4b;
-        // background-color: rgba(19, 25, 47, 0.66);
+        background-color: rgba(19, 25, 47, 0.33);
         img {
             width: 40px;
             height: 40px;
             margin-right: 4px;
         }
-
         .detail-item-text {
             .h3 {
                 color: #bcdcff;
                 font-size: 10px;
             }
-
+            .h50 {
+                display: flex;
+                align-items: center;
+            }
             span {
                 font-weight: bolder;
                 background: linear-gradient(to bottom, #fff, #4db6e5);
@@ -158,9 +157,14 @@ a:hover {
 
 // 渐变文字
 .cube-span {
+    font-size: 14px;
     font-weight: bolder;
     background: linear-gradient(to bottom, #fff, #4db6e5);
     color: transparent;
     -webkit-background-clip: text;
     background-clip: text;
+}
+
+.anchorBL{
+    display: none;
 }
